--- a/RandomTeamer/RandomTeamer/MainWindow.xaml
+++ b/RandomTeamer/RandomTeamer/MainWindow.xaml
@@ -169,7 +169,7 @@
 
             <StackPanel Orientation="Vertical">
                 <Button Margin="0,5,0,0" x:Name="ButtonSaveTeams" Content="Save Teams" Command="{Binding SaveTeams}" Height="20" HorizontalAlignment="Stretch" Click="ButtonSaveTeams_Click"/>
-                <Button Margin="0,5,0,0" x:Name="ButtonLoadTeams" Content="Load Tems" Command="{Binding LoadTeams}" Height="20" HorizontalAlignment="Stretch"/>
+                <Button Margin="0,5,0,0" x:Name="ButtonLoadTeams" Content="Load Teams" Command="{Binding LoadTeams}" Height="20" HorizontalAlignment="Stretch"/>
             </StackPanel>
         </StackPanel>
 
